--- a/OptimizeProject/index.html
+++ b/OptimizeProject/index.html
@@ -15,7 +15,7 @@
 <body>
     <nav>
         <div class="wrapper">
-            <div class="nav-container"> <img src="images/logo.png" alt="Logo OPTIMIZE" class="logo">
+            <div class="nav-container"> <img src="images/logo empresa preta.png" alt="Logo OPTIMIZE" class="logo">
                 <div class="links"> <a href="#home">Home</a> <a href="#sobre">Sobre</a> <a href="#planos">Planos</a> <a
                         href="#download">Aplicativo</a> </div>
                 <div class="search"> <input type="search" placeholder="Procurar serviços..." aria-label="Pesquisar"> <i
@@ -33,7 +33,7 @@
                 <div class="hero-ctas"> <button class="btn primary" id="contactBtn" data-plan="">Entrar em
                         contato</button> <a href="#planos" class="btn ghost">Ver planos</a> </div>
             </div>
-            <div class="image" data-aos="zoom-in" data-aos-duration="1200"> <img src="images/main.png"
+            <div class="image" data-aos="zoom-in" data-aos-duration="3000"> <img src="images/Logo Empresa.png"
                     alt="Ilustração de performance" /> </div>
         </div>
     </header> <!-- SOBRE -->
